--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ section#noticias h3{
 	margin: 25px 0;
 	text-transform: uppercase;
 }
-
 section#noticias ul li a{
 	text-align: center;
 	font-size: 19px;
+
 	color: white;
 	background: red;
 	display: block;
@@ -83,4 +83,28 @@ section#noticias ul li a:hover{
 section#noticias ul li p{
 	text-align: center;
 	margin: 15px 0;
+}
+section#projetos ul{
+    display: flex;
+    text-align: center;
+}
+section#projetos img{
+    height: 250px;
+    width: 100%;
+}
+section#projetos ul li{
+    list-style: none;
+    margin: 10px;
+}
+section#banner{
+    height: 350px;
+    background: url("https://static1.cbrimages.com/wordpress/wp-content/uploads/2024/10/jjk-panda-fights.jpg");
+}
+section#projetos ul{
+    display: flex;
+    width: 1100px;
+    margin: 0 auto;
+}
+section#projetos ul li{
+    overflow: hidden;
 }
